# ml

./: README.md  pyproject.toml
ml/classification/simple/: Predict.py  Training.py
ml/classification/simple/adeline/: Adeline.py
ml/classification/simple/perceptron/: Loader.py  Perceptron.py  Predict.py  Training.py
scripts/: run-classifier-loader.ps1  run-classifier-predict.ps1  run-classifier-training.ps1  run-perceptron-loader.ps1  run-perceptron-predict.ps1  run-perceptron-training.ps1  run-perceptron.ps1
